# git-events-runner

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  build.rs  cliff.toml  deny.toml  index.html  mkdocs.yml  versions.json
.cargo/: config.toml
.github/: mkdocs-requirements.txt
.github/workflows/: audit.yaml  ci.yaml  coverage.yaml  publish-charts.yaml  publish-docs.yaml  publish-image.yaml  publish-images.yaml  publish-release.yaml
0.1/: 404.html  index.html  sitemap.xml
0.1/bugs/: index.html
0.1/changelog/: index.html
0.1/examples/: schedule-trigger.yaml
0.1/guides/concepts/: index.html
0.1/guides/config/: index.html
0.1/guides/install/: index.html
0.1/intro/overview/: index.html
0.1/intro/quick-start/: index.html
0.1/intro/state/: index.html
0.1/lic/: index.html
0.1/resources/actions/: index.html
0.1/resources/sources/: index.html
0.1/resources/triggers/: index.html
0.1/roadmap/: index.html
bugs/: index.html
changelog/: index.html
charts/: README.md  prepare-crds.sh
charts/git-events-runner/: Chart.yaml  values.yaml
charts/git-events-runner/ci/: local-default.yaml
charts/git-events-runner/templates/: _helpers.tpl  config.yaml  deployment.yaml  ingress.yaml  service.yaml
docker-build/: action-worker.dockerfile  git-events-runner.dockerfile  gitrepo-cloner.dockerfile  local-build.sh
docs/: index.md
docs/examples/: action.yaml  clusteraction.yaml  clustergitrepo.yaml  controller-gitrepo.yaml  scheduletrigger.yaml  webhooktrigger.yaml
docs/guides/: concepts.md  config.md  examples.md  install.md  observability.md
docs/intro/: overview.md  quick-start.md  state.md
docs/resources/: actions.md  sources.md  triggers.md
examples/: clusteraction.yaml
guides/concepts/: index.html
guides/config/: index.html
guides/install/: index.html
intro/overview/: index.html
intro/quick-start/: index.html
intro/state/: index.html
lic/: index.html
main/: 404.html  index.html  sitemap.xml
main/bugs/: index.html
main/changelog/: index.html
main/examples/: power-job-role.yaml
main/guides/concepts/: index.html
main/guides/config/: index.html
main/guides/install/: index.html
main/guides/observability/: index.html
main/intro/overview/: index.html
main/intro/quick-start/: index.html
main/intro/state/: index.html
main/lic/: index.html
main/resources/actions/: index.html
main/resources/sources/: index.html
main/resources/triggers/: index.html
main/roadmap/: index.html
resources/actions/: index.html
resources/sources/: index.html
resources/triggers/: index.html
roadmap/: index.html
search/: search_index.json
src/: cache.rs  cli.rs  config.rs  controller.rs  controllers.rs  crdgen.rs  gitrepo-cloner.rs  jobs.rs  leader.rs  leader_lock.rs  lib.rs  lock.rs  main.rs  secrets_cache.rs  signals.rs  web.rs
src/controllers/: action.rs  git_repo.rs  trigger.rs
src/resources/: action.rs  git_repo.rs  mod.rs  trigger.rs
src/resources/snapshots/: git_events_runner__resources__action__tests__customized_action_job-2.snap  git_events_runner__resources__action__tests__customized_action_job-3.snap  git_events_runner__resources__action__tests__customized_action_job-4.snap  git_events_runner__resources__action__tests__customized_action_job-5.snap  git_events_runner__resources__action__tests__customized_action_job-6.snap  git_events_runner__resources__action__tests__customized_action_job.snap  git_events_runner__resources__action__tests__customized_cluster_action_job-2.snap  git_events_runner__resources__action__tests__customized_cluster_action_job-3.snap  git_events_runner__resources__action__tests__customized_cluster_action_job-4.snap  git_events_runner__resources__action__tests__customized_cluster_action_job-5.snap  git_events_runner__resources__action__tests__customized_cluster_action_job-6.snap  git_events_runner__resources__action__tests__customized_cluster_action_job.snap  git_events_runner__resources__action__tests__default_action_job-2.snap  git_events_runner__resources__action__tests__default_action_job-3.snap  git_events_runner__resources__action__tests__default_action_job-4.snap  git_events_runner__resources__action__tests__default_action_job-5.snap  git_events_runner__resources__action__tests__default_action_job-6.snap  git_events_runner__resources__action__tests__default_action_job.snap  git_events_runner__resources__action__tests__default_cluster_action_job-2.snap  git_events_runner__resources__action__tests__default_cluster_action_job-3.snap  git_events_runner__resources__action__tests__default_cluster_action_job-4.snap  git_events_runner__resources__action__tests__default_cluster_action_job-5.snap  git_events_runner__resources__action__tests__default_cluster_action_job-6.snap  git_events_runner__resources__action__tests__default_cluster_action_job.snap  (+9 more)
src/snapshots/: git_events_runner__cache__tests__secrets_cache-2.snap  git_events_runner__cache__tests__secrets_cache.snap  git_events_runner__cli__tests__default_cli_consistency.snap  git_events_runner__config__tests__yaml_config_consistency.snap
src/tests/: containers.rs
src/tests/containers/: gitea.rs  k3s.rs
tests/: .gitignore
tests/scripts/: prepare-test-env.sh
v0.1/: 404.html  index.html  sitemap.xml
v0.1/bugs/: index.html
v0.1/changelog/: index.html
v0.1/examples/: action.yaml  gitrepo.yaml  upgrade-controller-action.yaml
v0.1/lic/: index.html
v0.1/roadmap/: index.html
v0.2/: 404.html  index.html  sitemap.xml
v0.2/bugs/: index.html
v0.2/changelog/: index.html
v0.2/examples/: clusteraction.yaml
v0.2/lic/: index.html
v0.2/roadmap/: index.html
v0.3/: 404.html  index.html  sitemap.xml
v0.3/bugs/: index.html
v0.3/changelog/: index.html
v0.3/examples/: action.yaml
v0.3/lic/: index.html
v0.3/roadmap/: index.html
v0.4/: 404.html  index.html  sitemap.xml
v0.4/bugs/: index.html
v0.4/changelog/: index.html
v0.4/examples/: scheduletrigger.yaml  upgrade-helm-release.sh  webhook-trigger.yaml
v0.4/lic/: index.html
v0.4/roadmap/: index.html
(+57 files in other folders)
